[package]
name = "circ"
version = "0.1.0"
authors = ["Brian Yarr <brian.yarr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path="../api"}
dirs = "2.0.2"
serde_yaml = "0.8.11"
serde = {version = "1.0.104", features = ["derive"]}
